Update meta description with concise and personal hook

--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Portafolio profesional de Matías Gracia - Desarrollador Full Stack especializado en React, Node.js, Python y sistemas embebidos"
+      content="🚀 Desarrollador Full Stack que transforma ideas en aplicaciones web innovadoras. Especialista en React, Node.js, Python y sistemas embebidos. ¡Descubre mis proyectos!"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
